--- a/public/app/views/pages/login.html
+++ b/public/app/views/pages/login.html
@@ -1,10 +1,10 @@
 <div class="row col-md-6 col-md-offset-3">
 
  	<div class="alert alert-info">
-		<p>Test Info</p>
-		<p><strong>Username</strong>: Test</p>
-		<p><strong>Password</strong>: test</p>
-		<p><a href="#" ng-click="login.createSample()" class="btn btn-sm btn-primary">Crea usuari test</a></p>
+		<p>Usuari de prova</p>
+		<p><strong>Nom usuari</strong>: UOC</p>
+		<p><strong>Contrasenya</strong>: test</p>
+		<p><a href="#" ng-click="login.createSample()" class="btn btn-sm btn-primary">Crea usuari UOC</a></p>
 	</div>
 
 	<div class="jumbotron">
@@ -13,12 +13,12 @@
 		<form ng-submit="login.doLogin()">
 
 			<div class="form-group">
-				<label>Username</label>
+				<label>Usuari</label>
 				<input type="text" class="form-control" ng-model="login.loginData.username">
 			</div>
 
 			<div class="form-group">
-				<label>Password</label>
+				<label>Contrasenya</label>
 				<input type="password" class="form-control" ng-model="login.loginData.password">
 			</div>
 
