sample/api arreglat per evitar pending request en testing.

--- a/public/app/views/pages/login.html
+++ b/public/app/views/pages/login.html
@@ -4,7 +4,7 @@
 		<p>Usuari de prova</p>
 		<p><strong>Nom usuari</strong>: UOC</p>
 		<p><strong>Contrasenya</strong>: test</p>
-		<p><a href="#" ng-click="login.createSample()" class="btn btn-sm btn-primary" id="botoCreaUsuariUOC">Crea usuari UOC</a></p>
+		<p><a href="#" ng-click="login.createSample()" class="btn btn-sm btn-primary">Crea usuari UOC</a></p>
 	</div>
 
 	<div class="jumbotron">
