--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -22,14 +22,17 @@
 	<!-- controllers -->
 	<script src="app/controllers/mainCtrl.js"></script>
 	<script src="app/controllers/userCtrl.js"></script>
+    <script src="app/controllers/pollControllers.js"></script>
 
 	<!-- services -->
 	<script src="app/services/authService.js"></script>
 	<script src="app/services/userService.js"></script>
+    <script src="app/services/pollService.js"></script>
 
 	<!-- main Angular app files -->
 	<script src="app/app.routes.js"></script>
 	<script src="app/app.js"></script>
+    <script src="app/pollApp.js"></script>
 </head>
 <body ng-app="userApp" ng-controller="mainController as main">
 
@@ -42,12 +45,16 @@
 
 </span> Enquestes UOC</a>
 		</div>
-		<ul class="nav navbar-nav">
+		<!-- <ul class="nav navbar-nav">
 			<li><a href="/users"><span class="glyphicon glyphicon-user"></span> Usuaris</a></li>
-		</ul>
+		</ul> -->
+        <ul class="nav navbar-nav">
+            <li><a href="/polls"><span class="glyphicon glyphicon-user"></span>Veure enquestes</a></li>
+        </ul>
 		<ul class="nav navbar-nav navbar-right">
 			<li ng-if="!main.loggedIn"><a href="/login">Login</a></li>
-			<li ng-if="main.loggedIn" class="navbar-text">Hola {{ main.user.username }}!</li>
+			<li ng-if="main.loggedIn" class="navbar-text" style="
+                padding-top: 5px;">Hola {{ main.user.username }}!</li>
 			<li ng-if="main.loggedIn"><a href="#" ng-click="main.doLogout()">Logout</a></li>
 		</ul>
 	</div>
