Afegint els test anteriors, arxiu spec.js i el nou spec_veure ... amb correcio veure enquestes boto

--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -8,6 +8,6 @@
 
 	<div ng-if="main.loggedIn">
 		<p>Accedeix per crear, votar o mirar enquestes.</p>
-		<a href="/polls" class="btn btn-primary">Veure enquestes</a>
+		<a href="/polls" class="btn btn-primary" id="botoLoginVeureEnquestes">Veure enquestes</a>
 	</div>
 </div>
