--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -18,11 +18,13 @@
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular-route.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular-animate.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular-resource.js"></script>
+	<script src="/socket.io/socket.io.js"></script>
 
 	<!-- controllers -->
 	<script src="app/controllers/mainCtrl.js"></script>
 	<script src="app/controllers/userCtrl.js"></script>
-    <script src="app/controllers/pollControllers.js"></script>
+    <script src="app/controllers/pollController.js"></script>
 
 	<!-- services -->
 	<script src="app/services/authService.js"></script>
