--- a/public/app/views/pages/partials/list.html
+++ b/public/app/views/pages/partials/list.html
@@ -3,7 +3,7 @@
 </div>
 <div class="row">
 	<div class="col-xs-5">
-		<a href="#/new" class="btn btn-default"><span class="glyphicon glyphicon-plus"></span> Crear nova enquesta</a>
+		<a href="/new" class="btn btn-default"><span class="glyphicon glyphicon-plus"></span> Crear nova enquesta</a>
 	</div>
 	<div class="col-xs-7">
 		<input type="text" class="form-control" ng-model="query" placeholder="Buscar una esquesta">
@@ -14,11 +14,11 @@
 </div>
 <div class="row" ng-switch on="polls.length">
 	<ul ng-switch-when="0">
-		<li><em>No hi ha enquestes. Voldries <a href="#/new">crear una nova</a>?</li>
+		<li><em>No hi ha enquestes. Voldries <a href="/new">crear una nova</a>?</li>
 	</ul>
 	<ul ng-switch-default>
 		<li ng-repeat="poll in polls | filter:query">
-			<a href="#/poll/{{poll._id}}">{{poll.question}}</a>
+			<a href="/poll/{{poll._id}}">{{poll.question}}</a>
 		</li>
 	</ul>
 </div>
