--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -45,25 +45,31 @@
 
 <!-- NAVBAR -->
 <header>
-	<div class="navbar navbar-inverse" ng-if="main.loggedIn">
+	<div class="navbar navbar-fixed-top" ng-if="main.loggedIn">
 	<div class="container" style="padding-bottom: 15px;">
 		<div class="navbar-header">
-			<a href="/" class="navbar-brand"><span style="padding-right: 30px; padding-top: 3px; display:inline-block;padding-bottom: 5px;"><img class="UOClogo" src="assets/images/uoc-logo.png"></img>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+          </button>
 
-</span> Enquestes UOC</a>
-		</div>
-		<!-- <ul class="nav navbar-nav">
-			<li><a href="/users"><span class="glyphicon glyphicon-user"></span> Usuaris</a></li>
-		</ul> -->
-        <ul class="nav navbar-nav">
-            <li><a href="/polls"><span class="glyphicon glyphicon-user"></span>Veure enquestes</a></li>
-        </ul>
-		<ul class="nav navbar-nav navbar-right">
-			<li ng-if="!main.loggedIn"><a href="/login">Login</a></li>
-			<li ng-if="main.loggedIn" class="navbar-text" style="
-                padding-top: 5px;">Hola {{ main.user.username }}!</li>
-			<li ng-if="main.loggedIn"><a href="#" ng-click="main.doLogout()">Logout</a></li>
-		</ul>
+			<a href="/" class="navbar-brand"><span style="padding-right: 30px; padding-top: 3px; display:inline-block;padding-bottom: 5px;"><img class="UOClogo" src="assets/images/uoc-logo.png"></img>
+            </span></a>
+            <!--   </span> Enquestes UOC</a> -->
+        </div>
+
+		<div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/polls"><span class="glyphicon glyphicon-list-alt"></span> Veure enquestes</a></li>
+                <li ng-if="!main.loggedIn"><a href="/login">Login</a></li>
+                <!-- <li ng-if="main.loggedIn" class="navbar-text" style="
+                    padding-top: 5px;">Hola {{ main.user.username }}!</li> -->
+                <li ng-if="main.loggedIn"><a href="#" ng-click="main.doLogout()">Logout</a></li>
+            </ul>
+
+        </div>
 	</div>
 	</div>
 </header>
