--- a/public/app/views/pages/partials/item.html
+++ b/public/app/views/pages/partials/item.html
@@ -1,12 +1,12 @@
 <div class="page-header">
-	<h1>View Poll</h1>
+	<h1>Veure enquesta</h1>
 </div>
 <div class="well well-lg">
-	<strong>Question</strong><br>{{poll.question}}
+	<strong>Pregunta</strong><br>{{poll.question}}
 </div>
 
 <div ng-hide="poll.userVoted">
-	<p class="lead">Please select one of the following options:</p>
+	<p class="lead">Selecciona una de les opcions següents: </p>
 
 	<form role="form" ng-submit="vote()">
 		<div ng-repeat="choice in poll.choices" class="radio">
@@ -18,15 +18,15 @@
 		<p><hr></p>
 		<div class="row">
 			<div class="col-xs-6">
-				<a href="/polls" class="btn btn-default" role="button"><span class="glyphicon glyphicon-arrow-left"></span> Back to Poll List</a>
+				<a href="/polls" class="btn btn-default" role="button"><span class="glyphicon glyphicon-arrow-left"></span> Tornar al llistat d'enquestes</a>
 			</div>
 			<div class="col-xs-6">
-				<button class="btn btn-primary pull-right" type="submit">Vote &raquo;</button>
+				<button class="btn btn-primary pull-right" type="submit">Votar &raquo;</button>
 			</div>
 		</div>
 	</form>
 </div>
-	
+
 <div ng-show="poll.userVoted">
 	<table class="result-table">
 		<tr ng-repeat="choice in poll.choices">
@@ -38,17 +38,17 @@
 			</td>
 		</tr>
 	</table>
-			
+
 	<p>
 		<em>
-			{{poll.totalVotes}} votes counted so far.
-			<span ng-show="poll.userChoice">You voted for <strong>{{poll.userChoice.text}}</strong>.</span>
+			{{poll.totalVotes}} vots comptabilitzats.
+			<span ng-show="poll.userChoice">Has votat l'opció <strong>{{poll.userChoice.text}}</strong>.</span>
 		</em>
 	</p>
-	
+
 	<p><hr></p>
-	
-	<p><a href="/polls" class="btn btn-default" role="button"><span class="glyphicon glyphicon-arrow-left"></span> Back to Poll List</a></p>
+
+	<p><a href="/polls" class="btn btn-default" role="button"><span class="glyphicon glyphicon-arrow-left"></span> Tornar al llistat d'enquestes</a></p>
 </div>
 
 <p>&nbsp;</p>
