--- a/public/app/views/pages/login.html
+++ b/public/app/views/pages/login.html
@@ -4,7 +4,8 @@
 		<p>Usuari de prova</p>
 		<p><strong>Nom usuari</strong>: UOC</p>
 		<p><strong>Contrasenya</strong>: test</p>
-		<p><a href="#" ng-click="login.createSample()" class="btn btn-sm btn-primary">Crea usuari UOC</a></p>
+		<p><a href="#" ng-click="login.createSample()" class="btn btn-sm btn-primary">Crea usuari UOC </a>
+        <a href="/users/create" class="btn btn-sm btn-primary"> O crea un nou usuari</a></p>
 	</div>
 
 	<div class="jumbotron">
