--- a/public/app/views/pages/users/single.html
+++ b/public/app/views/pages/users/single.html
@@ -1,26 +1,26 @@
 <div class="page-header">
-	<h1 ng-if="user.type == 'create'">Create User</h1>
-	<h1 ng-if="user.type == 'edit'">Edit User</h1>
+	<h1 ng-if="user.type == 'create'">Crear nou usuari</h1>
+	<h1 ng-if="user.type == 'edit'">Editar usuari</h1>
 </div>
 
 <form class="form-horizontal" ng-submit="user.saveUser()">
 
 	<div class="form-group">
-		<label class="col-sm-2 control-label">Name</label>
+		<label class="col-sm-2 control-label">Nom</label>
 		<div class="col-sm-6">
 			<input type="text" class="form-control" ng-model="user.userData.name">
 		</div>
 	</div>
 
 	<div class="form-group">
-		<label class="col-sm-2 control-label">Username</label>
+		<label class="col-sm-2 control-label">Usuari</label>
 		<div class="col-sm-6">
 			<input type="text" class="form-control" ng-model="user.userData.username">
 		</div>
 	</div>
 
 	<div class="form-group">
-		<label class="col-sm-2 control-label">Password</label>
+		<label class="col-sm-2 control-label">Contrasenya</label>
 		<div class="col-sm-6">
 			<input type="password" class="form-control" ng-model="user.userData.password">
 		</div>
@@ -28,8 +28,8 @@
 
 	<div class="form-group">
 	<div class="col-sm-offset-2 col-sm-6">
-		<button type="submit" class="btn btn-success btn-lg btn-block" ng-if="user.type == 'create'" id="botoCrearUsuari">Create User</button>
-		<button type="submit" class="btn btn-success btn-lg btn-block" ng-if="user.type == 'edit'">Update User</button>
+		<button type="submit" class="btn btn-success btn-lg btn-block" ng-if="user.type == 'create'" id="botoCrearUsuari">Crear usuari</button>
+		<button type="submit" class="btn btn-success btn-lg btn-block" ng-if="user.type == 'edit'">Actualitzar usuari</button>
 	</div>
 	</div>
 
