--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -72,6 +72,29 @@
         </div>
 	</div>
 	</div>
+    <div class="navbar navbar-fixed-top" ng-if="!main.loggedIn">
+    <div class="container" style="padding-bottom: 15px;">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+          </button>
+
+            <a href="/" class="navbar-brand"><span style="padding-right: 30px; padding-top: 3px; display:inline-block;padding-bottom: 5px;"><img class="UOClogo" src="assets/images/uoc-logo.png"></img>
+            </span></a>
+            <!--   </span> Enquestes UOC</a> -->
+        </div>
+
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/"><span class="glyphicon glyphicon-list-alt"></span> Enquestes UOC</a></li>
+            </ul>
+
+        </div>
+    </div>
+    </div>
 </header>
 
 <main class="container">
