test crear enquesta creat

--- a/public/app/views/pages/partials/new.html
+++ b/public/app/views/pages/partials/new.html
@@ -29,7 +29,7 @@
 			<a href="/polls" class="btn btn-default" role="button"><span class="glyphicon glyphicon-arrow-left"></span> Tornar al llistat d'enquestes</a>
 		</div>
 		<div class="col-xs-6">
-			<button class="btn btn-primary pull-right" type="submit">Crear enquesta &raquo;</button>
+			<button class="btn btn-primary pull-right" type="submit" id="botoConfirmaEnquesta">Crear enquesta &raquo;</button>
 		</div>
 	</div>
 
