--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6,7 +6,7 @@ main 					{
 ===================== */
 header .navbar 		{
 	border-radius:0;
-    background-color: #D2D0D0;
+    background-color: #DBDAD8;
 }
 
 .navbar-toggle .icon-bar {
