navbar reajustada i boto crear usuari

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -63,6 +63,7 @@
 		<div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/polls"><span class="glyphicon glyphicon-list-alt"></span> Veure enquestes</a></li>
+                 <li><a href="/users/create"><span class="glyphicon glyphicon-user"></span> Crear usuari</a></li>
                 <li ng-if="!main.loggedIn"><a href="/login">Login</a></li>
                 <!-- <li ng-if="main.loggedIn" class="navbar-text" style="
                     padding-top: 5px;">Hola {{ main.user.username }}!</li> -->
