--- a/public/app/views/pages/login.html
+++ b/public/app/views/pages/login.html
@@ -1,11 +1,12 @@
 <div class="row col-md-6 col-md-offset-3">
 
  	<div class="alert alert-info">
-		<p>Usuari de prova</p>
+		<p>Per crear un compte nou primer accedeix amb l'usuari UOC</p>
 		<p><strong>Nom usuari</strong>: UOC</p>
 		<p><strong>Contrasenya</strong>: test</p>
 		<p><a href="#" ng-click="login.createSample()" class="btn btn-sm btn-primary">Crea usuari UOC </a>
-        <a href="/users/create" class="btn btn-sm btn-primary"> O crea un nou usuari</a></p>
+        <!-- <a href="/users/create" class="btn btn-sm btn-primary"> O crea un nou usuari</a> -->
+        </p>
 	</div>
 
 	<div class="jumbotron">
