--- a/public/app/views/pages/partials/item.html
+++ b/public/app/views/pages/partials/item.html
@@ -41,7 +41,7 @@
 
 	<p>
 		<em>
-			{{poll.totalVotes}} vots comptabilitzats.
+			<strong id="numVots">{{poll.totalVotes}}</strong> vots comptabilitzats.
 			<span ng-show="poll.userChoice" id="votComptabilitzat">Has votat l'opció <strong>{{poll.userChoice.text}}</strong>.</span>
 		</em>
 	</p>
